MM2-572:Fix icon with text alignment

--- a/src/app/modules/more/card/card-details/container/card-details.page.scss
+++ b/src/app/modules/more/card/card-details/container/card-details.page.scss
@@ -6,6 +6,7 @@
     align-items: center;
     padding-top: 24px;
     padding-bottom: 24px;
+    display: flex;
 
     .unfreeze-img {
       background-color: #435cdc;
